--- a/package.json
+++ b/package.json
@@ -2,19 +2,38 @@
   "name": "next-default-project",
   "version": "0.1.0",
   "private": true,
+  "author": "Carlos Gabriel",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
+  "license": "MIT",
   "dependencies": {
+    "date-fns": "^2.23.0",
+    "js-cookie": "^3.0.0",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.7",
+    "@types/node": "^16.9.1",
+    "@types/react": "^17.0.20",
+    "@types/styled-components": "^5.1.14",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import-helpers": "^1.1.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.4.0",
+    "typescript": "^4.4.3"
   }
 }
